# mighty-mouse

./: .gitignore  AGENTS.md  CHECKLIST.md  CONTEXT.md  LICENSE  README.md  START-HERE-ANTIGRAVITY.md  async_service.py  autoresearch-lessons.md  autoresearch-results-m3.tsv  autoresearch-results.tsv  baseline-run-antigravity.md  build_backend.py  config_loader.py  decorator.py  encoder.py  env_config.py  error_handler.py  helpers.py  legacy_registry.py  list_merger.py  logger.py  markdown_id.py  md_parser.py  merger.py  mighty-antigravity-compact.md  mighty-antigravity-flashpoint.md  mighty-antigravity-frozen.md  mighty-antigravity-gemini-flash.md  mighty-antigravity-native.md  mighty-antigravity-unified.md  mighty-antigravity-variant-blocks.md  mighty-autoresearch-log-format.md  mighty-autoresearch-mutation-strategy.md  mighty-benchmark-antigravity.md  mighty-core.md  mighty-scorecard.md  mighty-variant-test-order.md  mighty-variants-antigravity.md  parser.py  (+8 more)
.agents/workflows/: autoresearch-flashpoint.md  autoresearch-mighty.md  autoresearch-native.md  autoresearch-unified.md  z-autoresearch-mighty.md
.github/workflows/: ci.yml  sync-portfolio-facts.yml
.gsd/: AUTORESEARCH-SPEC-ANTIGRAVITY.md  AUTORESEARCH-SPEC.md  ROADMAP.md  SPEC.md  STATE.md  autoresearch-lessons.md  config.json  v1.0-MILESTONE-AUDIT.md  v10-MILESTONE-AUDIT.md  v13-MILESTONE-AUDIT.md  v2-MILESTONE-AUDIT.md  v7-MILESTONE-AUDIT.md
.gsd/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v13-REQUIREMENTS.md  v13-ROADMAP.md  v14-REQUIREMENTS.md
benchmark/: run_stress_test.py
benchmark/antigravity-v1/: CLEAN_BENCHMARK_WORKFLOW.md  OPERATOR_RUNBOOK.md  SELF_GRADING_LOOP.md  SUBAGENT_GRADER_PROMPT.md  SUBAGENT_ORCHESTRATOR_CHECKLIST.md  SUBAGENT_SOLVER_PROMPT.md  (+4 more)
configs/: gemma.json  mighty_mouse_abort.yaml  mighty_mouse_dev_sim.yaml  mighty_mouse_v1.yaml  scout_config.yaml  system_prompt.txt
docs/: local-model-capability-results.md  local-model-capability-study.md  scored-corpus-authoring.md
eval/: analyze_local_model_study.py  autoresearch_harness.py  check_token_usage.py  compute_scaler.py  evaluation_config.json  generate_benchmark.py  generate_chart.py  mutation_engine.py  parity_report.py  perpetual_harness.sh  perpetual_loop.py  record_real_project_trial.py  reset_workspace.sh  run_ab_validation.py  run_bare_baseline.py  run_benchmark.py  run_decomposed.py  run_decomposed_v2.py  run_hybrid.py  run_iteration.sh  run_local_model_pilot.py  run_local_model_study.py  run_parallel.py  run_parallel_debug.py  run_spike.py  run_validation.py  sandbox_wrapper.py  score_metrics.py  solve_benchmark.py  subagent_spawner.py  test_analyze_local_model_study.py  test_bare_baseline.py  test_best_of_n_ranker.py  test_ci_workflow.py  test_cli.py  test_compute_scaler.py  test_feedback_integration.py  test_local_agent_runtime.py  test_local_model_pilot.py  test_local_model_study.py  (+29 more)
logs/: benchmark_results.json
mcp/: README.md  build_backend.py  pyproject.toml
mcp/src/mighty_mouse_mcp/: __init__.py  hooks.py  server.py
skills/: README.md
tasks/: mock_task.json
(+2657 files in other folders)
