[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mighty-mouse"
version = "0.1.0"
description = "High-reliability coding protocol for small models"
authors = [
    { name = "Mighty Mouse Team" }
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
]

[tool.setuptools.package-data]
mighty_mouse = ["resources/**/*"]

[project.scripts]
mighty-mouse = "mighty_mouse.cli:main"

[tool.pytest.ini_options]
norecursedirs = [
    "scratch",
    ".archive",
    "data",
    "test_ws_*",
    ".gsd",
    ".agents",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mighty_mouse*"]
