[build-system]
requires = ["setuptools>=61.0"]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "mighty-mouse"
version = "0.2.1"
description = "Provider-agnostic coding protocols and project verification for AI agents"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Mighty Mouse Team" }
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/JOHNNYMACONNY/mighty-mouse"
Repository = "https://github.com/JOHNNYMACONNY/mighty-mouse"
Issues = "https://github.com/JOHNNYMACONNY/mighty-mouse/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "mcp>=1.0,<2",
    "tomli>=2; python_version < '3.11'",
]

[tool.setuptools.package-data]
mighty_mouse = ["resources/**/*", "protocols/**/*.md"]

[tool.setuptools.exclude-package-data]
"*" = ["._*", "*/._*", "*/*/._*", "*/*/*/._*"]

[project.scripts]
mighty-mouse = "mighty_mouse.cli:main"

[tool.pytest.ini_options]
norecursedirs = [
    "scratch",
    ".archive",
    "data",
    "test_ws_*",
    ".gsd",
    ".agents",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mighty_mouse*"]
