[build-system]
requires = ["setuptools>=69"]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "mighty-mouse-mcp"
version = "0.2.2"
description = "MCP transport for Mighty Mouse project verification and coding protocols"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0,<2",
    "mighty-mouse>=0.2.2,<0.3",
]

[project.scripts]
mighty-mouse-mcp = "mighty_mouse_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.exclude-package-data]
"*" = ["._*", "*/._*", "*/*/._*", "*/*/*/._*"]
